Code block no longer wraps

--- a/enzedonline/static/css/enzedonline.css
+++ b/enzedonline/static/css/enzedonline.css
@@ -599,6 +599,7 @@
     background-color: lightgrey;
     padding: 0.06rem 0.2rem;
     border-radius: 3px;
+    white-space: pre !important;
   }
   label {
     font-family: var(--font-family-headings);
